--- a/web/css/frontend.css
+++ b/web/css/frontend.css
@@ -621,6 +621,15 @@ body.home .info .wrapper {
     -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
             border-radius: 3px;
+    -webkit-transition: 200ms all ease;
+        -moz-transition: 200ms all ease;
+            -o-transition: 200ms all ease;
+                transition:
+
+}
+
+body.home .info .wrapper:hover {
+    background: #e9e9e9;
 }
 
 body.home #content .info .subtitle {
@@ -641,6 +650,9 @@ body.home #content .info .h2 {
     line-height: 21px;
     margin-bottom: 8px;
 }
+
+body.home #content .info .h2 a { color: #658686; }
+body.home #content .info .h2 a:hover { text-decoration: none; }
 
 #map {
     z-index: 10;
@@ -811,6 +823,8 @@ body.bio li.type-text:first-child img { width: 99%; border: solid 1px #dedede; }
     #frame {
         height: 64vh;
     }
+
+    body.bio #content li.type-text:first-child blockquote { font-size: 13px }
 }
 
 @media screen and (max-height: 780px) {
