--- a/web/css/frontend.css
+++ b/web/css/frontend.css
@@ -304,6 +304,14 @@ header .headline img {
     margin-bottom: 20px;
 }
 
+#content-header .sharing {
+    float: right;
+}
+
+#content-header .sharing a {
+    color: #aeaeae;
+}
+
 /* Frame */
 
 #frame {
@@ -442,7 +450,7 @@ footer {
     background-position: left center, right center, center;
     position: fixed;
     bottom: 0px;
-    z-index: 1000;
+    z-index: 100;
 }
 
 footer ul {
@@ -495,6 +503,13 @@ footer .colophon .credits a
 }
 
 footer .colophon a:hover { background:none; color:#9e9e9e; text-decoration:underline; }
+
+footer .fb-like-wrapper {
+    width: 100px;
+    overflow: hidden;
+    float: right;
+    margin: 21px 3px 0 0;
+}
 
 /* -----------------------------------------------------------------------------
     Specific page : Bio
