--- a/web/css/frontend.css
+++ b/web/css/frontend.css
@@ -307,6 +307,11 @@ header .headline img {
     top: 5px;
 }
 
+header .copyright {
+    color: #ccc;
+    margin-left: 2px;
+}
+
 /* -----------------------------------------------------------------------------
     Main elements : Content
 ----------------------------------------------------------------------------- */
